crates/tui/src/chat_screen/snapshots/savfox_tui__chat_screen__tests__chat_small_running_h2.snap
---
source: crates/tui/src/chat_screen/tests.rs
expression: terminal.backend()
---
" ██████  ██    ██ ████████ ██████  █████"
"██    ██ ██    ██    ██    ██     ██    "
