crates/tui/src/chat_screen/snapshots/savfox_tui__chat_screen__tests__exec_approval_history_decision_aborted_long.snap
---
source: crates/tui/src/chat_screen/tests.rs
expression: lines_to_single_string(&aborted_long)
---
✗ You canceled the request to run echo
  aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa...
