crates/tui/src/chat_screen/snapshots/savfox_tui__chat_screen__tests__exec_approval_history_decision_approved_short.snap
---
source: crates/tui/src/chat_screen/tests.rs
expression: lines_to_single_string(&decision)
---
✔ You approved savfox to run echo hello world this time
