crates/tui/src/chat_screen/snapshots/savfox_tui__chat_screen__tests__exec_approval_modal_exec.snap
---
source: crates/tui/src/chat_screen/tests.rs
expression: "format!(\"{buf:?}\")"
---
Buffer {
    area: Rect { x: 0, y: 0, width: 80, height: 31 },
    content: [
        "               ██████    ████   ██    ██ ██████  ██████  ██    ██               ",
        "              ██        ██  ██  ██    ██ ██     ██    ██  ██  ██                ",
        "               ██████  ████████ ██    ██ █████  ██    ██   ████                 ",
        "                    ██ ██    ██  ██  ██  ██     ██    ██  ██  ██                ",
        "              ██████   ██    ██   ████   ██      ██████  ██    ██               ",
        "                                                                                ",
        "                                Welcome to Savfox                               ",
        "                            Your AI coding assistant                            ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "  Would you like to run the following command?                                  ",
        "                                                                                ",
        "  Reason: this is a test reason such as one that would be produced by the       ",
        "  model                                                                         ",
        "                                                                                ",
        "  $ echo hello world                                                            ",
        "                                                                                ",
        "› 1. Yes, proceed (y)                                                           ",
        "  2. No, and tell Savfox what to do differently (esc)                           ",
        "                                                                                ",
        "  Press enter to confirm or esc to cancel                                       ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 14, y: 0, fg: Rgb(180, 40, 20), bg: Reset, underline: Reset, modifier: BOLD,
        x: 22, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 23, y: 0, fg: Rgb(210, 50, 10), bg: Reset, underline: Reset, modifier: BOLD,
        x: 31, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 32, y: 0, fg: Rgb(235, 70, 0), bg: Reset, underline: Reset, modifier: BOLD,
        x: 40, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 41, y: 0, fg: Rgb(255, 100, 0), bg: Reset, underline: Reset, modifier: BOLD,
        x: 47, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 48, y: 0, fg: Rgb(255, 140, 10), bg: Reset, underline: Reset, modifier: BOLD,
        x: 56, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 57, y: 0, fg: Rgb(255, 175, 30), bg: Reset, underline: Reset, modifier: BOLD,
        x: 65, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 14, y: 1, fg: Rgb(180, 40, 20), bg: Reset, underline: Reset, modifier: BOLD,
        x: 22, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 23, y: 1, fg: Rgb(210, 50, 10), bg: Reset, underline: Reset, modifier: BOLD,
        x: 31, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 32, y: 1, fg: Rgb(235, 70, 0), bg: Reset, underline: Reset, modifier: BOLD,
        x: 40, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 41, y: 1, fg: Rgb(255, 100, 0), bg: Reset, underline: Reset, modifier: BOLD,
        x: 47, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 48, y: 1, fg: Rgb(255, 140, 10), bg: Reset, underline: Reset, modifier: BOLD,
        x: 56, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 57, y: 1, fg: Rgb(255, 175, 30), bg: Reset, underline: Reset, modifier: BOLD,
        x: 65, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 14, y: 2, fg: Rgb(180, 40, 20), bg: Reset, underline: Reset, modifier: BOLD,
        x: 22, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 23, y: 2, fg: Rgb(210, 50, 10), bg: Reset, underline: Reset, modifier: BOLD,
        x: 31, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 32, y: 2, fg: Rgb(235, 70, 0), bg: Reset, underline: Reset, modifier: BOLD,
        x: 40, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 41, y: 2, fg: Rgb(255, 100, 0), bg: Reset, underline: Reset, modifier: BOLD,
        x: 47, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 48, y: 2, fg: Rgb(255, 140, 10), bg: Reset, underline: Reset, modifier: BOLD,
        x: 56, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 57, y: 2, fg: Rgb(255, 175, 30), bg: Reset, underline: Reset, modifier: BOLD,
        x: 65, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 14, y: 3, fg: Rgb(180, 40, 20), bg: Reset, underline: Reset, modifier: BOLD,
        x: 22, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 23, y: 3, fg: Rgb(210, 50, 10), bg: Reset, underline: Reset, modifier: BOLD,
        x: 31, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 32, y: 3, fg: Rgb(235, 70, 0), bg: Reset, underline: Reset, modifier: BOLD,
        x: 40, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 41, y: 3, fg: Rgb(255, 100, 0), bg: Reset, underline: Reset, modifier: BOLD,
        x: 47, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 48, y: 3, fg: Rgb(255, 140, 10), bg: Reset, underline: Reset, modifier: BOLD,
        x: 56, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 57, y: 3, fg: Rgb(255, 175, 30), bg: Reset, underline: Reset, modifier: BOLD,
        x: 65, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 14, y: 4, fg: Rgb(180, 40, 20), bg: Reset, underline: Reset, modifier: BOLD,
        x: 22, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 23, y: 4, fg: Rgb(210, 50, 10), bg: Reset, underline: Reset, modifier: BOLD,
        x: 31, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 32, y: 4, fg: Rgb(235, 70, 0), bg: Reset, underline: Reset, modifier: BOLD,
        x: 40, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 41, y: 4, fg: Rgb(255, 100, 0), bg: Reset, underline: Reset, modifier: BOLD,
        x: 47, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 48, y: 4, fg: Rgb(255, 140, 10), bg: Reset, underline: Reset, modifier: BOLD,
        x: 56, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 57, y: 4, fg: Rgb(255, 175, 30), bg: Reset, underline: Reset, modifier: BOLD,
        x: 65, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 32, y: 6, fg: Rgb(255, 82, 82), bg: Reset, underline: Reset, modifier: BOLD,
        x: 49, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 28, y: 7, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 52, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 12, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 46, y: 12, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 10, y: 14, fg: Reset, bg: Reset, underline: Reset, modifier: ITALIC,
        x: 73, y: 14, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 15, fg: Reset, bg: Reset, underline: Reset, modifier: ITALIC,
        x: 7, y: 15, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 19, fg: Cyan, bg: Reset, underline: Reset, modifier: BOLD,
        x: 21, y: 19, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 49, y: 20, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 52, y: 20, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 22, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 0, y: 23, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
