crates/tui/src/chat_screen/snapshots/savfox_tui__chat_screen__tests__exploring_step1_start_ls.snap
---
source: crates/tui/src/chat_screen/tests.rs
expression: active_blob(&chat)
---
• Exploring
  └ List ls -la
