crates/tui/src/chat_screen/snapshots/savfox_tui__chat_screen__tests__exploring_step5_finish_sed_range.snap
---
source: crates/tui/src/chat_screen/tests.rs
expression: active_blob(&chat)
---
• Explored
  └ List ls -la
    Read foo.txt
